--- a/assets/css/receita/receita-botao.css
+++ b/assets/css/receita/receita-botao.css
@@ -1,13 +1,13 @@
 .receita__botao {
-    background: #8d0606;
-    border: none;
-    border-radius: 4px;
-    color: #fdfdfd;
-    padding: 1rem;
-    transition: all .1s ease-in-out;
+  background: #8d0606;
+  border: none;
+  border-radius: 4px;
+  color: #fdfdfd;
+  padding: 1rem;
+  transition: all 0.1s ease-in-out;
 }
 
 .receita__botao:hover {
-    background: #620404;
-    cursor: pointer;
+  cursor: pointer;
+  background: #620404;
 }
